# cryptoparser

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  sample_articles.json  ТЗ_Мониторинг_цифровых_активов.docx
config/: sources.example.yml
crypto-monitor-skills/: MANIFEST.json  README.md
crypto-monitor-skills/crypto-digest-builder/: SKILL.md
crypto-monitor-skills/crypto-digest-quality-check/: SKILL.md
crypto-monitor-skills/crypto-news-classifier/: SKILL.md
crypto-monitor-skills/crypto-news-deduplicator/: SKILL.md
crypto-monitor-skills/crypto-news-prioritizer/: SKILL.md
crypto-monitor-skills/crypto-news-summarizer/: SKILL.md
crypto-monitor-skills/crypto-news-translator/: SKILL.md
crypto-monitor-skills/crypto-source-validator/: SKILL.md
crypto-monitor-skills/docs/: integration-guide.md  skill-development-guide.md
crypto_monitor/: __init__.py  cli.py  collector_runner.py  config.py  digest_renderer.py  evals.py  gemini.py  health.py  json_utils.py  logging.py  models.py  normalization.py  pipeline.py  rates.py  retry.py  security.py  skills.py  sources.py  storage.py  telegram_bot.py
docs/: railway.md  runbook.md  tz-gap-analysis.md
scripts/: run_pipeline.py
tests/: test_digest_renderer.py  test_evals.py  test_gov_kz_collector.py  test_health.py  test_html_collector.py  test_json_utils.py  test_normalization.py  test_pipeline_dry_run.py  test_rates.py  test_retry.py  test_security.py  test_skills.py  test_storage.py  test_telegram_bot.py  test_telegram_delivery.py
(+29 files in other folders)
