[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-monitor-gemini"
version = "0.1.0"
description = "Automated digital-assets monitoring pipeline with Google Gemini AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Crypto Monitor Team" }]
dependencies = [
  "google-genai>=1.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "PyYAML>=6.0.1",
  "typer>=0.12.3",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
crypto-monitor = "crypto_monitor.cli:app"

[tool.setuptools.packages.find]
include = ["crypto_monitor*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
